// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadTitleIcon renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-c-multiple-file-upload__title-icon test"
    data-testid="test-id"
  />
</DocumentFragment>
`;

exports[`MultipleFileUploadTitleIcon renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-c-multiple-file-upload__title-icon"
    data-testid="test-id"
  />
</DocumentFragment>
`;
